# farmhand-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  farmhand.gs
src/: coingecko.rs  config.rs  main.rs  price.rs  price_change.rs  price_changes.rs  prices.rs
