[package]
name = "farmhand"
version = "0.1.0"
authors = ["alextes <alex.tesfamichael@gmail.com>"]
edition = "2021"

[dependencies]
axum = {version = "0.5"}
tokio = { version = "1", features = ["full"] }
cached = "0.34.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
phf = { version = "0.10", features = ["macros"] }
axum-macros = "0.2.1"
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.9.0"
